--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "keywords": [],
   "description": "",
   "devDependencies": {
+    "css-loader": "^6.7.3",
+    "style-loader": "^3.3.2",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.0.2"
   }
