--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "HelloMandu",
   "license": "MIT",
   "scripts": {
+    "start": "webpack serve --mode=production --open",
+    "start:dev": "webpack serve --mode=development --open",
     "build": "webpack --mode=production",
     "build:dev": "webpack --mode=development"
   },
@@ -15,6 +17,7 @@
     "html-webpack-plugin": "^5.5.1",
     "style-loader": "^3.3.2",
     "webpack": "^5.82.0",
-    "webpack-cli": "^5.0.2"
+    "webpack-cli": "^5.0.2",
+    "webpack-dev-server": "^4.13.3"
   }
 }
