--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "description": "",
   "devDependencies": {
     "css-loader": "^6.7.3",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
     "html-webpack-plugin": "^5.5.1",
     "mini-css-extract-plugin": "^2.7.5",
+    "prettier": "^2.8.8",
     "style-loader": "^3.3.2",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.0.2",
