index.js -> app.js

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vanilla-js-boilerplate",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "src/app.js",
   "author": "HelloMandu",
   "license": "MIT",
   "scripts": {
